[gd_scene load_steps=5 format=3 uid="uid://dokn6jd1cjp1"]

[ext_resource type="Script" uid="uid://bddjdh2jyce73" path="res://Scripts/combat_malakron.gd" id="1_84tx2"]
[ext_resource type="Texture2D" uid="uid://qksl8mw8ps17" path="res://assets/malakron_battle_backgrond.png" id="2_52ium"]
[ext_resource type="PackedScene" uid="uid://smqnujipi0eq" path="res://Scenes/Malakron.tscn" id="2_f802s"]
[ext_resource type="PackedScene" uid="uid://x5njiwmdt4me" path="res://Scenes/Player_combat.tscn" id="3_52ium"]

[node name="Combat" type="Node2D"]
position = Vector2(-280, -66)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_84tx2")

[node name="Background" type="TextureRect" parent="."]
offset_left = 181.0
offset_top = 39.0
offset_right = 963.0
offset_bottom = 488.0
texture = ExtResource("2_52ium")
expand_mode = 1

[node name="PlayerHealth" type="Label" parent="."]
offset_left = 344.0
offset_top = 164.0
offset_right = 435.0
offset_bottom = 187.0
text = "Heron's HP:"
horizontal_alignment = 1

[node name="EnemyHealth" type="Label" parent="."]
offset_left = 695.0
offset_top = 167.0
offset_right = 816.0
offset_bottom = 190.0
text = "Malakron's HP: "
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="."]
offset_left = 437.333
offset_top = 397.333
offset_right = 501.333
offset_bottom = 428.333
text = "Attack"

[node name="DefendButton" type="Button" parent="."]
offset_left = 523.0
offset_top = 396.0
offset_right = 588.0
offset_bottom = 429.0
text = "Defend
"

[node name="RunButton" type="Button" parent="."]
offset_left = 608.667
offset_top = 396.667
offset_right = 730.667
offset_bottom = 427.667
text = "Cannot Escape"

[node name="CombatLog" type="Label" parent="."]
offset_left = 342.0
offset_top = 77.0
offset_right = 810.0
offset_bottom = 100.0
text = "Combat Begins"
horizontal_alignment = 1

[node name="PlayerCombat" parent="." instance=ExtResource("3_52ium")]
position = Vector2(391, 291)
scale = Vector2(5, 5)

[node name="Enemy" parent="." instance=ExtResource("2_f802s")]
position = Vector2(755.333, 286)
scale = Vector2(5, 5)
